Fjerner noen warnings på generics.