@@ -1,22 +1,15 @@
 package no.nav.registre.varslingerservice.controller;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
-
-import java.util.List;
-import java.util.stream.Collectors;
-
 import no.nav.registre.varslingerservice.adapter.VarslingerAdapter;
 import no.nav.registre.varslingerservice.domain.Varsling;
 import no.nav.testnav.libs.dto.varslingerapi.v1.VarslingDTO;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
+
+import java.util.List;
+import java.util.Optional;
 
 @RestController
 @RequestMapping("/api/v1/varslinger")
@@ -27,12 +20,16 @@ public class VarslingerController {
 
     @GetMapping
     public ResponseEntity<List<VarslingDTO>> getVarslinger() {
-        var list = varslingerAdapter.getAll().stream().map(Varsling::toDTO).collect(Collectors.toList());
+        var list = varslingerAdapter
+                .getAll()
+                .stream()
+                .map(Varsling::toDTO)
+                .toList();
         return ResponseEntity.ok(list);
     }
 
     @PutMapping
-    public ResponseEntity<?> oppdaterVarslinger(@RequestBody VarslingDTO dto) {
+    public ResponseEntity<Object> oppdaterVarslinger(@RequestBody VarslingDTO dto) {
         String varslingId = varslingerAdapter.save(new Varsling(dto));
         var uri = ServletUriComponentsBuilder
                 .fromCurrentRequest()
@@ -43,17 +40,17 @@ public class VarslingerController {
     }
 
     @DeleteMapping("/{varslingId}")
-    public ResponseEntity<?> deleteVarslinger(@PathVariable("varslingId") String varslingId) {
+    public ResponseEntity<Object> deleteVarslinger(@PathVariable("varslingId") String varslingId) {
         varslingerAdapter.delete(varslingId);
         return ResponseEntity.ok().build();
     }
 
     @GetMapping("/{varslingId}")
-    public ResponseEntity<?> getVarslinger(@PathVariable("varslingId") String varslingId) {
-        var varsling = varslingerAdapter.get(varslingId);
-        if (varsling == null) {
-            return ResponseEntity.notFound().build();
-        }
-        return ResponseEntity.ok(varsling.toDTO());
+    public ResponseEntity<VarslingDTO> getVarslinger(@PathVariable("varslingId") String varslingId) {
+        return Optional
+                .ofNullable(varslingerAdapter.get(varslingId))
+                .map(varsling -> ResponseEntity.ok(varsling.toDTO()))
+                .orElse(ResponseEntity.notFound().build());
     }
+
 }
